<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:title="@string/library"
        android:id="@+id/library"
        android:icon="@drawable/baseline_library_books_24"/>
    <item
        android:title="@string/music"
        android:id="@+id/podcast"
        android:icon="@drawable/baseline_music_note_24"/>
    <item
        android:title="@string/download"
        android:id="@+id/download"
        android:icon="@drawable/baseline_download_24"/>
    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"/>
</menu>