<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Settings">

    <!--back arrow-->
    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/settings_back_arrow" />

    <LinearLayout
        android:layout_width="420dp"
        android:layout_height="546dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729">

        <!--logout-->
        <Button
            android:id="@+id/button9"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:backgroundTint="@color/green_sheen"
            android:text="@string/settings_log_out" />

        <!--delete-->
        <Button
            android:id="@+id/button11"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:backgroundTint="@color/green_sheen"
            android:text="@string/settings_delete" />

        <!--ratings-->
        <TextView
            android:id="@+id/textView22"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/background"
            android:text="@string/settings_rate_us"
            android:textAlignment="center"
            android:textColor="@color/chathams_blue"
            android:textSize="20sp" />


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="190dp"
            android:layout_height="47dp"
            android:layout_marginStart="120dp" />

        <!--follow-->
        <TextView
            android:id="@+id/textView26"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/Settings_follow_us"
            android:textAlignment="center"
            android:textColor="@color/chathams_blue"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <!--Social media-->
            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="120dp"
                android:contentDescription="@string/settings_fb"
                app:srcCompat="@drawable/facebook" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_small"
                android:contentDescription="@string/profile_insta"
                app:srcCompat="@drawable/insta" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_small"
                android:contentDescription="@string/profile_twt"
                app:srcCompat="@drawable/twitter" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>