<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignUp">

    <!--Image-->
    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="203dp"
        android:layout_height="230dp"
        android:contentDescription="@string/signUp_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/signup" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="420dp"
        android:layout_height="226dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727">

        <!--Name box-->
        <EditText
            android:id="@+id/editTextText"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:autofillHints="Name"
            android:background="@color/box1"
            android:ems="10"
            android:hint="@string/signUp_name"
            android:inputType="text" />

        <!--Email box-->
        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_small"
            android:autofillHints="Email"
            android:background="@color/box1"
            android:ems="10"
            android:hint="@string/signIn_email"
            android:inputType="textEmailAddress" />

        <!--Phone no box-->
        <EditText
            android:id="@+id/editTextPhone2"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_small"
            android:autofillHints="Phone"
            android:background="@color/box1"
            android:ems="10"
            android:hint="@string/signUp_phone"
            android:inputType="phone" />
    </LinearLayout>

    <!--Sign in button-->
    <Button
        android:id="@+id/button14"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green_sheen"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

    <!--Sign up msg-->
    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_msg"
        android:textColor="@color/chathams_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <!--Redirect msg-->
    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_redirect_msg"
        android:textColor="@color/chathams_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

</androidx.constraintlayout.widget.ConstraintLayout>