<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Podcasts">

    <!--toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="415dp"
        android:layout_height="77dp"
        android:background="@color/nav"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--Hi text-->
    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upper_nav_text"
        android:textColor="@color/chathams_blue"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <!--logo-->
    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="83dp"
        android:layout_height="82dp"
        android:contentDescription="@string/logo_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <!--Navigation bar-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav"
        tools:ignore="MissingConstraints" />

    <!--Image-->
    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="331dp"
        android:layout_height="190dp"
        android:contentDescription="@string/music_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        app:srcCompat="@drawable/podcast" />

    <!--podcast list-->
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="412dp"
        android:layout_height="351dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854">

        <!--Podcast play button-->
        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="57dp"
            android:layout_height="51dp"
            app:srcCompat="@drawable/baseline_play_circle_24"
            android:contentDescription="@string/music_play_image" />

        <!--podcast list-->
        <TextView
            android:id="@+id/textView18"
            android:layout_width="372dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/box"
            android:text="@string/podcast1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="372dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/box"
            android:text="@string/podcast2" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="372dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/box"
            android:text="@string/podcast3" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="372dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/box"
            android:text="@string/podcast4" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>